--- a/FileNameTagger/FileNameTagger/TagTypes/DateTagTypeView.xaml
+++ b/FileNameTagger/FileNameTagger/TagTypes/DateTagTypeView.xaml
@@ -1,17 +1,14 @@
-﻿<ContentControl x:Class="FileNameTagger.TagTypeView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:FileNameTagger"
-        mc:Ignorable="d"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
-    <Control.DataContext>
-        <local:TagTypeViewModel/>
-    </Control.DataContext>
-
+﻿<ContentControl x:Class="FileNameTagger.TagTypes.DateTagTypeView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:FileNameTagger"
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
     <Control.Resources>
-        <DataTemplate x:Key="TagTypeListItemDataTemplate">
+        <DataTemplate x:Key ="DateTagTypeItemDataTemplate">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition/>
@@ -54,38 +51,35 @@
                 </CheckBox>
             </Grid>
         </DataTemplate>
-
     </Control.Resources>
-        <Expander Header="{Binding TagType.Name}" 
-                  Height="366" 
-                  Width="535"
-                  >
-            <StackPanel>
+    <Expander Header="{Binding TagType.Name}">
+        <StackPanel>
 
-                <ListBox 
+            <ListBox         HorizontalContentAlignment="Stretch"
                              MaxHeight="150"
                              ItemsSource="{Binding Tags}"
-                             ItemTemplate="{StaticResource TagTypeListItemDataTemplate}"
+                             ItemTemplate="{StaticResource DateTagTypeItemDataTemplate}"
                              SelectedItem="{Binding SelectedTag}"
                              IsSynchronizedWithCurrentItem="True"/>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="3*"/>
-                        <ColumnDefinition Width="7*"/>
-                    </Grid.ColumnDefinitions>
-                    <TextBlock
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition Width="7*"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock
                             Grid.Column="0"
                             Text="{Binding Path=TagType.Name, StringFormat='Add New {0}s:'}" 
                             />
-                    <TextBox Grid.Column="1" AcceptsReturn="False">
-                        <TextBox.InputBindings>
-                            <KeyBinding 
+                <TextBox Grid.Column="1" AcceptsReturn="False">
+                    <TextBox.InputBindings>
+                        <KeyBinding 
                                          Key="Enter" 
                                         Command="{Binding AddTagCommand}"
                                         CommandParameter="{Binding RelativeSource ={RelativeSource FindAncestor,AncestorType={x:Type TextBox}, AncestorLevel=1}, Path=Text }" />
-                        </TextBox.InputBindings>
-                    </TextBox>
-                </Grid>
-            </StackPanel>
-        </Expander>
+                    </TextBox.InputBindings>
+                </TextBox>
+            </Grid>
+        </StackPanel>
+    </Expander>
+
 </ContentControl>
