--- a/FileNameTagger/FileNameTagger/TagTypes/EnumTagTypeView.xaml
+++ b/FileNameTagger/FileNameTagger/TagTypes/EnumTagTypeView.xaml
@@ -9,6 +9,9 @@
              d:DesignHeight="450" d:DesignWidth="800"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
     <Control.Resources>
+        <DataTemplate x:Key="EnumTagTypeItemDataTemplate">
+            <TextBox Text="{Binding Path=Value}"/>
+        </DataTemplate>
     </Control.Resources>
     <Grid x:Name="ResolutionBox">
         <Grid.ColumnDefinitions>
@@ -25,6 +28,7 @@
                             HorizontalAlignment="Center" 
                             VerticalAlignment="Center" 
                             MinWidth="150" 
+                            ItemTemplate="{StaticResource EnumTagTypeItemDataTemplate}"
                             SelectedItem="{Binding SelectedEnumTag}"
                             ItemsSource="{Binding EnumTags}"/>
     </Grid>
