finish up exporting of tag name from generic tag templates

--- a/FileNameTagger/FileNameTagger/MainWindow.xaml
+++ b/FileNameTagger/FileNameTagger/MainWindow.xaml
@@ -44,7 +44,7 @@
                     </MenuItem>
                     <MenuItem Header="_New Tag"
                           Command="{Binding ClearTagCommand}"/>
-                    <MenuItem Header="_Save Tag"
+                    <MenuItem Header="_Export Tag"
                           Command="{Binding SaveTagCommand}"/>
                 </MenuItem>
                 <MenuItem Header="_Templates" Style="{StaticResource MenuButtonTheme}" >
