--- a/FileNameTagger/FileNameTagger/MainWindow.xaml
+++ b/FileNameTagger/FileNameTagger/MainWindow.xaml
@@ -51,7 +51,7 @@
                     <MenuItem Header="_Load File"
                           Command ="{Binding AddFileCommand}">
                     </MenuItem>
-                    <MenuItem Header="_New Tag"
+                    <MenuItem Header="_Clear Tag Values"
                           Command="{Binding ClearTagCommand}"/>
                     <MenuItem Header="_Export Tag"
                           Command="{Binding SaveTagCommand}"/>
