--- a/FileNameTagger/FileNameTagger/TagTypes/TextListTagTypeView.xaml
+++ b/FileNameTagger/FileNameTagger/TagTypes/TextListTagTypeView.xaml
@@ -27,13 +27,13 @@
                                 Command="{Binding DataContext.DeleteTagCommand, RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBox}}}"
                                 CommandParameter="{Binding}"
                                 HorizontalAlignment="Left"
-                                Padding="10,10,10,10"
                                 Margin="5,0,0,0"
                                 >
                             <materialDesign:PackIcon
                                         Kind="TrashCanCircle"
-                                        Height="12"
-                                        Padding="0,10,10,0"/>
+                                        Height="16"
+                                        Width="16"
+                                        Margin="1,0,0,0"/>
                         </Button>
                     </WrapPanel>
                 </CheckBox>
@@ -56,9 +56,9 @@
                 </Grid.ColumnDefinitions>
                 <TextBlock
                             Grid.Column="0"
-                            Text="{Binding Path=TagType.Name, StringFormat='Add New {0}:'}" 
+                            Text="{Binding Path=TagType.Name, StringFormat='Add New {0} (Press Enter):'}" 
                             />
-                <TextBox Grid.Column="1" AcceptsReturn="False">
+                <TextBox Grid.Column="1" AcceptsReturn="False" Padding="5,0,0,0">
                     <TextBox.InputBindings>
                         <KeyBinding 
                                          Key="Enter" 
